--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Kreon', serif;
+  font-size: 12pt;
 }
 
 p {
@@ -8,7 +9,7 @@ p {
 
 /* Story box styles */
 .storybox {
-  height: 175px;
+  height: 180px;
   margin: 10px 0;
   padding: 12px 15px;
   border: none;
