--- a/css/style.css
+++ b/css/style.css
@@ -13,24 +13,22 @@ p {
   margin: 10px 0;
   padding: 12px 15px;
   border: none;
-  border-radius: 8px;
-  transition: border 200ms ease-in;
+  border-radius: 12px;
+  transition: border 200ms, background-color 200ms;
+  -webkit-transition: border 200ms, background-color 200ms;
 }
 
 .storybox.active {
-  border: 1px solid black;
-  background-color: #f4fdf1;
+  background-color: #ecf5e9;
 }
 
 .storybox.asleep {
   background-color: #eee;
-  border-color: #999;
   color: #999;
 }
 
 .storybox.dead {
   background-color: #d9534f;
-  border-color: #d43f3a;
   color: white;
 }
 
