new story up to decision

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,9 @@ a.story-link {
 a.story-link.disabled {
   color: black;
 }
-.asleep a.story-link {
+a.story-link.gray {
+  color: gray;
+}.asleep a.story-link {
   color: #999;
 }
 
@@ -53,6 +55,9 @@ a.story-link:hover {
 p:hover, a.story-link.disabled:hover {
   cursor: default;
   text-decoration: none;
+}
+a.story-link.gray:hover {
+  cursor: not-allowed;
 }
 
 /* Content fade animations */
